# webreader

./: Dockerfile  README.md  pyproject.toml
src/: __main__.py  agent.py  citations.py  embeddings.py  parser.py  rag.py  search.py
src/models/: request.py
src/parsers/: __init__.py  web_parser.py
tests/: test_agent.py
