[project]
name = "webreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "bs4>=0.0.2",
    "faiss-cpu>=1.11.0",
    "ichatbio-sdk==0.1.6",
    "instructor>=1.9.0",
    "nltk>=3.9.1",
    "openai>=1.86.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
]
